--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <meta charset="utf-8">
    <link rel="stylesheet" href="style.css">
 </head>
-<div class="box">
+<div class="box" id = "box">
 	<center><input type="file" name="files" id="files" class="inputfile"  multiple />
-	<label for="files"><span>Choose a file&hellip;</span></label></center>
+	<label id = "inputlabel" for="files"><span>Choose a file&hellip;</span></label></center>
 </div>
 <div id="textDisplayArea" class = "brd"></div>
 <script src="viewer.js"></script>
