ctrl + v; border feature

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <meta charset="utf-8">
    <link rel="stylesheet" href="style.css">
 </head>
-<div class="box" id = "box">
+<div class="box upload-cont" id = "box">
 	<center><input type="file" name="files" id="files" class="inputfile"  multiple />
 	<label id = "inputlabel" for="files"><span>Choose a file&hellip;</span></label></center>
 </div>
 <div id="textDisplayArea" class = "brd"></div>
 <script src="viewer.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
