--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	<center><input type="file" name="files" id="files" class="inputfile"  multiple />
 	<label id = "inputlabel" for="files"><span>Choose a file&hellip;</span></label></center>
 </div>
-<div id="textDisplayArea" class = "brd"></div>
-<script src="viewer.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<div id="textDisplayArea" class = "brd" contenteditable></div>
+<script type="text/javascript" src="viewer.js"></script>
+<script type="text/javascript" src="jquery.min.js"></script>
