--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
+          <link rel="shortcut icon" type="image/png" href="/favicon.png">
     </head>
     <body>
         <div class="box upload-cont" id="box">
