--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="style.css">
-          <link rel="shortcut icon" type="image/png" href="/favicon.png">
-    </head>
-    <body>
-        <div class="box upload-cont" id="box">
-	    <div class="labelstyle">Drop logs to analyze (or click)</div>
-            <input type="file" name="files" id="files" class="inputfile" multiple />
-        </div>
-        <div id="textDisplayArea" class="brd" contenteditable />
-        <script type="text/javascript" src="viewer.js"></script>
-        <script type="text/javascript" src="jquery.min.js"></script>
-    </body>
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
+  </head>
+  <body>
+    <div class="box upload-cont" id="box">
+      <div class="labelstyle">Drop logs to analyze (or click)</div>
+      <input type="file" name="files" id="files" class="inputfile" multiple />
+    </div>
+    <div id="textDisplayArea" class="brd" contenteditable />
+    <script type="text/javascript" src="viewer.js"></script>
+    <script type="text/javascript" src="jquery.min.js"></script>
+  </body>
 </html>
