Add support for decoding

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       <div class="labelstyle">Drop logs to analyze (or click)</div>
       <input type="file" name="files" id="files" class="inputfile" multiple />
     </div>
+    <div>
+        <input id="decryptCheckbox" type="checkbox" name="decrypt" value=""> decrypt logs
+    </div>
     <div id="textDisplayArea" class="brd" contenteditable />
     <script type="text/javascript" src="viewer.js"></script>
     <script type="text/javascript" src="jquery.min.js"></script>
