--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
       <div class="labelstyle">Drop logs to analyze (or click)</div>
       <input type="file" name="files" id="files" class="inputfile" multiple />
     </div>
-    <div>
-        <input id="decryptCheckbox" type="checkbox" name="decrypt" value=""> decrypt logs
+    <div class="controls">
+        <div id="inputlabel"><span></span></div>
+        <div class="decrypt">
+            <input id="decryptCheckbox" type="checkbox" name="decrypt" value=""> decrypt logs
+        </div>
+        <div class="filtertext">
+            <input id="filterText" type="text" name="filter"> <input type="button" value="Filter" onclick="filterLogs()">&nbsp;<input type="button" value="Reset" onclick="resetFiltering()">
+        </div>
     </div>
-    <div id="inputlabel"><span></span></div>
-    <input id="filterText" type="text" name="filter"> <input type="button" value="Filter" onclick="filterLogs()">&nbsp;<input type="button" value="Reset" onclick="resetFiltering()">
     <div id="textDisplayArea" class="brd" contenteditable />
     <script type="text/javascript" src="viewer.js"></script>
     <script type="text/javascript" src="jquery.min.js"></script>
